--- a/src/components/Table/hoc/withTableSelection/withTableSelection.scss
+++ b/src/components/Table/hoc/withTableSelection/withTableSelection.scss
@@ -7,8 +7,6 @@
     }
 
     &__selection-checkbox {
-        display: flex;
-        align-items: center;
         padding: inherit;
         border-bottom: none;
         position: absolute;
